# pi-mono

./: PROJECT-STRUCTURE.md  debug_agent.py  debug_agent2.py  debug_agent3.py  debug_raw.py  debug_raw2.py  debug_stream.py  debug_stream2.py  fix_live_test.py  pyproject.toml  temp_requirement_doc.md
python-packages/agent/: CHANGELOG.md  CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TASK_COMPLETION_REPORT.md  example_config_usage.py  pyproject.toml
python-packages/agent/agent/: test_agent_integration.py
python-packages/agent/config/: agent_config.json
python-packages/agent/config/prompts/: system_prompt.md
python-packages/agent/src/: __init__.py  agent.py  agent_loop.py  config_loader.py  stream_fn_factory.py  tool_registry.py  types.py
python-packages/agent/test/: test_agent.py  test_agent_integration.py  test_agent_loop.py  test_bash_tool.py  test_config_loader.py  test_stream_fn_factory.py  test_tool_discovery.py  test_tool_registry.py  test_types.py
python-packages/agent/test/utils/: calculate.py
python-packages/agent/tools/: __init__.py  bash_tool.py
python-packages/ai/: README.md  pyproject.toml
python-packages/ai/ai/providers/: friday_config.py  friday_responses.py
python-packages/ai/config/: friday.json
python-packages/ai/src/: __init__.py  api_registry.py  core_types.py  env_api_keys.py  models.py  stream.py
python-packages/ai/src/providers/: __init__.py  friday_config.py  friday_responses.py  simple_options.py  transform_messages.py
python-packages/ai/src/utils/: __init__.py  event_stream.py  json_parse.py  overflow.py  sanitize_unicode.py  validation.py
python-packages/ai/test/: conftest.py  test_api_registry.py  test_env_api_keys.py  test_event_stream.py  test_friday_api_live.py  test_friday_integration.py  test_friday_responses.py  test_json_parse.py  test_models.py  test_overflow.py  test_sanitize_unicode.py  test_simple_options.py  test_stream.py  test_transform_messages.py  test_types.py  test_validation.py
