[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-ai"
version = "0.1.0"
description = "Unified LLM API with automatic model discovery and streaming support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pi Mono Team"}
]
keywords = ["llm", "ai", "openai", "anthropic", "google", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typing-extensions>=4.0.0",
    "jsonschema>=4.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/badlogic/pi-mono"
Repository = "https://github.com/badlogic/pi-mono"

[tool.setuptools]
package-dir = {"pi_ai" = "src"}

[tool.setuptools.package-data]
pi_ai = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

